FIX: Overflow in bar chart

--- a/src/app/admin/pages/economy/economy.component.css
+++ b/src/app/admin/pages/economy/economy.component.css
@@ -8,6 +8,10 @@
 
 }
 
+.grouped-horizontal-bar-chart {
+    margin-top: 500px;
+}
+
 .economy>div {
     display: flex;
     flex-direction: column;
